// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryCounty renders with a custom value 1`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           value="foobar"
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with a custom value 2`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           value="foobar"
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with a disabled input element 1`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           disabled
           value
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with a disabled input element 2`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           disabled
           value
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with an error 1`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           value
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with an error 2`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           value
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with default props 1`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           value
    >
  </span>
</label>
`;

exports[`DeliveryCounty renders with default props 2`] = `
<label id="deliveryCountyField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      County
      <small>
        (optional)
      </small>
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCounty"
           name="deliveryCounty"
           data-trackable="field-deliveryCounty"
           autocomplete="address-level3"
           placeholder="e.g. Somerset"
           value
    >
  </span>
</label>
`;
